<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>colcon_test_pkg</name>
  <version>1.0.1</version>
  <description>sandbox</description>


  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>
  <author email="marc@hanheide.net">Marc Hanheide</author>
  <license>MIT</license>

  <depend>ament_cmake</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
